--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 /backup/
 *.libcfg
 *.syn
+work/
+simulation/
+synthesis/
+compile/
 
 # Simulation outputs
 *.asdb
@@ -25,6 +29,19 @@
 *.rpt
 *.dat
 *.bak
+*.wsp
+*.wsw
+*.mgf
+*.adf
+*.duser
+*.asdbw
+*.cmd
+*.order
+*.lib
+*wave*/
+*.vho
+*.do
+*.ini
 
 # Lock or temporary files
 *.lock
